Fixes scrollbar corner appearing white

--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,14 @@
 }
 
 ::-webkit-scrollbar-track {
-  /*box-shadow: inset 0 0 5px grey;*/
-  border-radius: 16px;
+    border-radius: 16px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: rgba(20,20,20,.6);
   border-radius: 10px;
+}
+::-webkit-scrollbar-corner {
+  border-radius: 10px;
+  background-color: rgba(20,20,20,.6);
 }
